# dpms

./: README.md  build-python-portable.sh  dpms-complition.sh  pyproject.toml  search.py  setup.bat  setup.py  setup.sh
dm/: dm.py
dpms/: config.py  dpms-command-help.py  dpms.py  dpms_callbacks.py  dpms_cli_progress.py  dpms_commit.py  dpms_confirm.py  dpms_core.py  dpms_crash_handler.py  dpms_crypto.py  dpms_errors.py  dpms_extract.py  dpms_feedback.py  dpms_fetch.py  dpms_frontend.py  dpms_ftparchive.py  dpms_get.py  dpms_gui.py  dpms_history.py  dpms_logging.py  dpms_logs.py  dpms_package.py  dpms_package_reader.py  dpms_persistor.py  dpms_plugin.py  dpms_portcommit.py  dpms_progress.py  dpms_pycomp.py  dpms_query.py  dpms_repo.py  dpms_requester.py  dpms_rescue.py  dpms_sack.py  dpms_search.py  dpms_selector.py  dpms_solver.py  dpms_subject.py  dpms_tags.py  dpms_transaction.py  dpms_tui.py  (+4 more)
dpms-bar/: __init__.py
wiki/: Commands.md  Home.md  Installation.md  Package-Format.md  dm.md
